--- a/style.css
+++ b/style.css
@@ -72,6 +72,7 @@ section {
 td {
   border-style: solid;
   border-color: #1fabe5;
+
 }
 
 thead {
@@ -118,8 +119,18 @@ label:last-of-type {
 
 table {
   margin-bottom: 20px;
+  border-collapse: collapse;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #1fabe5;
+  width: 100%;
 }
 
 form {
   margin-bottom: 20px;
+}
+
+td img {
+  width: 50px;
+  height: 50px;
 }
